Istio/sidecar/01-ingress-proxy-forwarding/deployment.yaml
## https://github.com/istio/istio/blob/master/samples/helloworld/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  labels:
    app: helloworld
    service: helloworld
#  namespace: visiblent
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-nginx
  labels:
    app: helloworld
#  namespace: visiblent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
#      namespace: visiblent
    spec:
#      serviceAccountName: istio-helloworld
      containers:
        - name: helloworld
          image: nginx
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80
